src/test/ui/rfc-2091-track-caller/error-with-trait-default-impl.stderr
error[E0738]: `#[track_caller]` may not be used on trait methods
  --> $DIR/error-with-trait-default-impl.rs:4:5
   |
LL |     #[track_caller]
   |     ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0738`.
